# django-product-service

./: .gitignore  ProductAPI.http  README.md  mypy.ini  pyproject.toml
Product/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
ProductCore/: admin.py  apps.py  urls.py
ProductCore/migrations/: 0001_initial.py
productcore/: admin.py  apps.py  models.py  urls.py
productcore/migrations/: 0001_initial.py
