[tool.poetry]
name = "django-product-service"
version = "0.1.0"
description = "A Django product service."
authors = ["Anthony Honstain"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.1.5"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.3"
django-structlog = "^4.1.1"
django-stubs = "^4.2.7"
djangorestframework-stubs = "^3.14.5"
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Black configuration
[tool.black]
line-length = 120